// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/TeamSettings hide invite code if no permissions for team inviting 1`] = `
<div>
  <div
    className="modal-header"
  >
    <button
      aria-label="Close"
      className="close"
      data-dismiss="modal"
      id="closeButton"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <h4
      className="modal-title"
    >
      <div
        className="modal-back"
      >
        <span
          onClick={[MockFunction]}
        >
          <BackIcon />
        </span>
      </div>
      <FormattedMessage
        defaultMessage="General Settings"
        id="general_tab.title"
      />
    </h4>
  </div>
  <div
    className="user-settings"
  >
    <h3
      className="tab-header"
    >
      <FormattedMessage
        defaultMessage="General Settings"
        id="general_tab.title"
      />
    </h3>
    <div
      className="divider-dark first"
    />
    <SettingItemMin
      section="name"
      title="Team Name"
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <SettingItemMin
      describe={
        <FormattedMessage
          defaultMessage="Click 'Edit' to add a team description."
          id="general_tab.emptyDescription"
        />
      }
      section="description"
      title="Team Description"
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <SettingPicture
      clientError=""
      file={null}
      helpText={
        <injectIntl(FormattedMarkdownMessage)
          defaultMessage="Upload a team icon in BMP, JPG or PNG format.\\\\nSquare images with a solid background color are recommended."
          id="setting_picture.help.team"
        />
      }
      imageContext="team"
      loadingPicture={false}
      onFileChange={[Function]}
      onRemove={[Function]}
      onSubmit={[Function]}
      serverError=""
      src={null}
      submitActive={false}
      title="Team Icon"
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <SettingItemMin
      describe={
        <FormattedMessage
          defaultMessage="Click 'Edit' to add an email domain whitelist."
          id="general_tab.allowedDomainsEdit"
        />
      }
      section="allowed_domains"
      title="allowedDomains"
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <SettingItemMin
      describe="No"
      section="open_invite"
      title="Allow any user with an account on this server to join this team"
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <SettingItemMin
      describe="Click 'Edit' to regenerate Invite Code."
      section="invite_id"
      title="Invite Code"
      updateSection={[Function]}
    />
    <div
      className="divider-dark"
    />
  </div>
</div>
`;

exports[`components/TeamSettings hide invite code if no permissions for team inviting 2`] = `
<div>
  <div
    className="modal-header"
  >
    <button
      aria-label="Close"
      className="close"
      data-dismiss="modal"
      id="closeButton"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <h4
      className="modal-title"
    >
      <div
        className="modal-back"
      >
        <span
          onClick={[MockFunction]}
        >
          <BackIcon />
        </span>
      </div>
      <FormattedMessage
        defaultMessage="General Settings"
        id="general_tab.title"
      />
    </h4>
  </div>
  <div
    className="user-settings"
  >
    <h3
      className="tab-header"
    >
      <FormattedMessage
        defaultMessage="General Settings"
        id="general_tab.title"
      />
    </h3>
    <div
      className="divider-dark first"
    />
    <SettingItemMin
      section="name"
      title="Team Name"
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <SettingItemMin
      describe={
        <FormattedMessage
          defaultMessage="Click 'Edit' to add a team description."
          id="general_tab.emptyDescription"
        />
      }
      section="description"
      title="Team Description"
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <SettingPicture
      clientError=""
      file={null}
      helpText={
        <injectIntl(FormattedMarkdownMessage)
          defaultMessage="Upload a team icon in BMP, JPG or PNG format.\\\\nSquare images with a solid background color are recommended."
          id="setting_picture.help.team"
        />
      }
      imageContext="team"
      loadingPicture={false}
      onFileChange={[Function]}
      onRemove={[Function]}
      onSubmit={[Function]}
      serverError=""
      src={null}
      submitActive={false}
      title="Team Icon"
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <SettingItemMin
      describe={
        <FormattedMessage
          defaultMessage="Click 'Edit' to add an email domain whitelist."
          id="general_tab.allowedDomainsEdit"
        />
      }
      section="allowed_domains"
      title="allowedDomains"
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <SettingItemMin
      describe="No"
      section="open_invite"
      title="Allow any user with an account on this server to join this team"
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <div
      className="divider-dark"
    />
  </div>
</div>
`;

exports[`components/TeamSettings should match snapshot when team is group constrained 1`] = `
<div>
  <div
    className="modal-header"
  >
    <button
      aria-label="Close"
      className="close"
      data-dismiss="modal"
      id="closeButton"
      onClick={[MockFunction]}
      type="button"
    >
      <span
        aria-hidden="true"
      >
        ×
      </span>
    </button>
    <h4
      className="modal-title"
    >
      <div
        className="modal-back"
      >
        <span
          onClick={[MockFunction]}
        >
          <BackIcon />
        </span>
      </div>
      <FormattedMessage
        defaultMessage="General Settings"
        id="general_tab.title"
      />
    </h4>
  </div>
  <div
    className="user-settings"
  >
    <h3
      className="tab-header"
    >
      <FormattedMessage
        defaultMessage="General Settings"
        id="general_tab.title"
      />
    </h3>
    <div
      className="divider-dark first"
    />
    <SettingItemMin
      describe="TestTeam"
      section="name"
      title="Team Name"
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <SettingItemMin
      describe="The Test Team"
      section="description"
      title="Team Description"
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <SettingPicture
      clientError=""
      file={null}
      helpText={
        <injectIntl(FormattedMarkdownMessage)
          defaultMessage="Upload a team icon in BMP, JPG or PNG format.\\\\nSquare images with a solid background color are recommended."
          id="setting_picture.help.team"
        />
      }
      imageContext="team"
      loadingPicture={false}
      onFileChange={[Function]}
      onRemove={[Function]}
      onSubmit={[Function]}
      serverError=""
      src={null}
      submitActive={false}
      title="Team Icon"
      updateSection={[Function]}
    />
    <div
      className="divider-light"
    />
    <SettingItemMin
      describe="No, members of this team are added and removed by linked groups."
      section="open_invite"
      title="Allow any user with an account on this server to join this team"
      updateSection={[Function]}
    />
    <div
      className="divider-dark"
    />
  </div>
</div>
`;
